--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -21,7 +21,7 @@
         <% if ( (theme.valine_counter.enable === true) && (theme.valine_counter.site_pv.enable === true) ) { %>
             <%- partial('_plugin/valine-counter/footer') %>
         <% } %>
-        Powered by&nbsp;<!--
+        Supported by&nbsp;<!--
          --><a href="https://hexo.io" target="_blank" class="footer-develop-a" rel="nofollow noopener noreferrer">Hexo</a><span class="footer-develop-divider"></span>Theme&nbsp;-&nbsp;<!--
          --><a href="https://github.com/SukkaW/hexo-theme-suka" target="_blank" class="footer-develop-a" rel="noopener">Suka</a>
     </p>
